# tap-adql-sandbox

./: .gitignore  LICENSE  MANIFEST.in  README.md  changelog.md  setup.cfg  setup.py  tap-adql-sandbox.sublime-project
src/tap_adql_sandbox/: __init__.py  __main__.py  config.py  examples.py  functions.py  simbad.py  theme.py  version.py
