[metadata]
name = tap-adql-sandbox
#version = attr: %(name)s.version.__version__
version = attr: tap_adql_sandbox.version.__version__
author = retif
description = A sandbox application for executing ADQL queries via TAP interface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tap, adql, gui, astronomy, astrophysics, cosmology, science
url = https://github.com/retifrav/tap-adql-sandbox
project_urls =
    Bug Tracker = https://github.com/retifrav/tap-adql-sandbox/issues
    Changelog = https://github.com/retifrav/tap-adql-sandbox/blob/master/changelog.md
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Desktop Environment
    Topic :: Software Development :: User Interfaces
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dearpygui
    pyvo
    pandas
    tabulate

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tap-adql-sandbox = tap_adql_sandbox.tap_adql_sandbox:main
